--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
   </head>
 
   <body>
-  <div class="header">
-     <div class="header-top"></div>
-   <div class="header-bottom"></div>
-  </div>
+      <header>
+     <h1 class="heading">
+         <a href="index.html">CARAVAN
+         </a>
+     </h1>
+      </header>
+      <!-- navigation -->
+    <nav>
+      <ul class="nav-list">
+           <li class="nav-list-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
+      </ul>
+    </nav>
 
 
    <div class="main-visual">
@@ -22,6 +34,8 @@
       <div class="sidebar"></div>
    </div>
 
-  <div class="footer"></div>
+   <footer>
+       <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+   </footer>
   </body>
 </html>
